# unsubmail-v2

./: .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  plan.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: batch_cleanup.rs  debug_oauth_token.rs  inspect_token.rs  simple_scan.rs  test_imap_connection.rs  test_xoauth2.rs
src/: lib.rs  main.rs
src/application/: mod.rs  workflow.rs
src/cli/: accounts.rs  actions.rs  interactive.rs  mod.rs  scan.rs  select.rs
src/domain/: analysis.rs  mod.rs  models.rs  planner.rs
src/infrastructure/: mod.rs
src/infrastructure/google/: auth.rs  delete.rs  filters.rs  gmail_api.rs  mod.rs
src/infrastructure/imap/: actions.rs  auth.rs  connection.rs  fetch.rs  mod.rs
src/infrastructure/network/: http_client.rs  mod.rs
src/infrastructure/storage/: json_store.rs  keyring.rs  mod.rs
tests/: domain_integration.rs  models_test.rs
