[package]
name = "unsubmail"
version = "0.1.0"
edition = "2021"
authors = ["unsubmail contributors"]
description = "Clean your Gmail inbox from newsletters and spam"
license = "MIT"
repository = "https://github.com/unsubmail/unsubmail"
keywords = ["email", "newsletter", "unsubscribe", "gmail", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# IMAP client (async)
async-imap = "0.9"
async-native-tls = "0.5"

# OAuth2
oauth2 = "4.4"

# HTTP client for one-click unsubscribe
reqwest = { version = "0.12", features = ["json"] }

# CLI framework
clap = { version = "4", features = ["derive"] }
inquire = "0.7"

# Progress and output
indicatif = "0.17"
console = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration storage
confy = "0.6"
directories = "5"

# Parallel processing
rayon = "1.10"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Email parsing
mailparse = "0.15"
regex = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Base64 for SASL
base64 = "0.22"

# URL parsing
url = "2"

# Environment variables
dotenvy = "0.15"

# Open browser
open = "5"

[dev-dependencies]
tokio-test = "0.4"
